# Structura

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Structura  cmake_install.cmake  main.cpp
.github/workflows/: c-cpp.yml
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Structura  a.out  c  cmake_install.cmake  main.cpp
